--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="app">
         <div class="wrap">
-            <div id = "select" class="select open"></div>
+            <div id = "select"></div>
         </div>
     </div>
 
